--- a/PracService/Pages/RegPage.xaml
+++ b/PracService/Pages/RegPage.xaml
@@ -25,6 +25,9 @@
         <TextBlock Text="Регистрация" Grid.Column="1" Grid.ColumnSpan="2" FontSize="40" FontWeight="Bold" HorizontalAlignment="Center"/>
         <TextBlock Text="login" Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="25"/>
         <TextBlock Text="password" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="25"/>
+        
+        <TextBox x:Name="tbLog" Grid.Row="1" Grid.Column="2"/>
+        <PasswordBox x:Name="tbPass" Grid.Row="2" Grid.Column="2"/>
 
         <Button x:Name="btnBack" Content="назад" Click="btnBack_Click"/>
         <Button x:Name="btnReg" Content="Создать аккаунт" Click="btnReg_Click" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2"/>
